--- a/src/main/resources/templates/limit-table.html
+++ b/src/main/resources/templates/limit-table.html
@@ -22,11 +22,11 @@
                 <tr th:each="limit : ${limits}">
                     <td th:text="${limit.id}">1</td>
                     <td th:text="${limit.type}">RETAIL</td>
-                    <td th:text="${#numbers.formatDecimal(limit.value, 1, 2)}">10000.00</td>
+                    <td class="text-end" th:text="${#numbers.formatDecimal(limit.value, 1, 'WHITESPACE', 2, 'COMMA')}">10000.00 PLN</td>
                     <td th:text="${limit.currency}">PLN</td>
                     <td th:text="${#temporals.format(limit.dateFrom, 'dd.MM.yyyy')}">01.01.2024</td>
                     <td th:text="${#temporals.format(limit.dateTo, 'dd.MM.yyyy')}">31.12.2024</td>
-                    <td th:text="${#numbers.formatDecimal(limit.used, 1, 2)}">500.00</td>
+                    <td class="text-end" th:text="${#numbers.formatDecimal(limit.used, 1, 'WHITESPACE', 2, 'COMMA')}">500.00 PLN</td>
                 </tr>
             </tbody>
         </table>
