--- a/src/main/resources/templates/limit-table.html
+++ b/src/main/resources/templates/limit-table.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
     <div th:fragment="limitsList">
-        <h4>Limity kontrahenta</h4>
+        <h4>Limity</h4>
         <div th:if="${#lists.isEmpty(limits)}" class="alert alert-info">
             Brak limitów dla tego kontrahenta.
         </div>
