--- a/src/main/resources/templates/contractor-details.html
+++ b/src/main/resources/templates/contractor-details.html
@@ -39,6 +39,15 @@
                          th:hx-get="@{/contractor/{id}/limits(id=${contractor.id})}"
                          hx-trigger="load"
                          hx-swap="outerHTML"></div>
+                    
+                    <div class="col-md-12 mt-4">
+                        <h4>IZP</h4>
+                        <div th:hx-get="@{/contractor/{id}/izp(id=${contractor.id})}"
+                             hx-trigger="load"
+                             hx-swap="innerHTML">
+                            <p>Ładowanie danych IZP...</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="alert alert-danger" th:unless="${contractor}">
                     Nie znaleziono kontrahenta.
