--- a/src/main/resources/templates/caf-edit.html
+++ b/src/main/resources/templates/caf-edit.html
@@ -132,6 +132,7 @@
                                     <span th:if="${caf.type.name() == 'INCREASE'}" class="badge text-bg-primary">Zwiększenie</span>
                                     <span th:if="${caf.type.name() == 'EXTENSION'}" class="badge text-bg-warning">Przedłużenie</span>
                                     <span th:if="${caf.type.name() == 'SUSPENSION'}" class="badge text-bg-danger">Zawieszenie</span>
+                                    <span th:if="${caf.type.name() == 'RESUME'}" class="badge text-bg-success">Wznowienie</span>
                                 </td>
                             </tr>
                             <tr>
