--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container mt-4">
         <h1>Lista kontrahentów</h1>
-        <div hx-get="/contractors" hx-trigger="load" hx-swap="innerHTML">
+        <div hx-get="/contractors" hx-trigger="load" hx-swap="innerHTML" id="contractorsContainer">
             <p>Ładowanie danych...</p>
         </div>
     </div>
