--- a/src/main/resources/templates/limit-table.html
+++ b/src/main/resources/templates/limit-table.html
@@ -85,18 +85,25 @@
                     <tr th:id="'limit-actions-' + ${limit.id}" style="display: none;">
                         <td colspan="14" class="bg-light">
                             <div class="d-flex gap-2 justify-content-center py-2">
-                                <form th:action="@{/limit/{limitId}/caf/increase(limitId=${limit.id})}" method="post">
-                                    <button type="submit" class="btn btn-primary btn-sm">Zwiększ</button>
-                                </form>
-                                <form th:action="@{/limit/{limitId}/caf/extension(limitId=${limit.id})}" method="post">
-                                    <button type="submit" class="btn btn-warning btn-sm">Przedłóż</button>
-                                </form>
-                                <form th:action="@{/limit/{limitId}/caf/suspension(limitId=${limit.id})}" method="post">
-                                    <button type="submit" class="btn btn-danger btn-sm">Zawieś</button>
-                                </form>
-                                <form th:action="@{/limit/{limitId}/caf/resume(limitId=${limit.id})}" method="post">
-                                    <button type="submit" class="btn btn-success btn-sm">Odwieś</button>
-                                </form>
+                                <!-- Jeśli limit jest zawieszony, pokazujemy tylko opcję Odwieś -->
+                                <th:block th:if="${limit.suspended}">
+                                    <form th:action="@{/limit/{limitId}/caf/resume(limitId=${limit.id})}" method="post">
+                                        <button type="submit" class="btn btn-success btn-sm">Odwieś</button>
+                                    </form>
+                                </th:block>
+                                
+                                <!-- Jeśli limit nie jest zawieszony, pokazujemy pozostałe opcje -->
+                                <th:block th:unless="${limit.suspended}">
+                                    <form th:action="@{/limit/{limitId}/caf/increase(limitId=${limit.id})}" method="post">
+                                        <button type="submit" class="btn btn-primary btn-sm">Zwiększ</button>
+                                    </form>
+                                    <form th:action="@{/limit/{limitId}/caf/extension(limitId=${limit.id})}" method="post">
+                                        <button type="submit" class="btn btn-warning btn-sm">Przedłóż</button>
+                                    </form>
+                                    <form th:action="@{/limit/{limitId}/caf/suspension(limitId=${limit.id})}" method="post">
+                                        <button type="submit" class="btn btn-danger btn-sm">Zawieś</button>
+                                    </form>
+                                </th:block>
                             </div>
                         </td>
                     </tr>
